--- a/demo_notebook.ipynb
+++ b/demo_notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# nfstream: a Flexible Network Data Analysis Framework"
+    "# NFStream: a Flexible Network Data Analysis Framework"
    ]
   },
   {
@@ -60,7 +60,7 @@
     "* `active_timeout` [default= `300` ]: Flows that are active for more than this value in seconds will be exported.\n",
     "* `plugins` [default= `()` ]: Set of user defined NFPlugins.\n",
     "* `dissect` [default= `True` ]: Enable nDPI deep packet inspection library for Layer 7 visibility.\n",
-    "* `max_tcp_dissections` [default= `10` ]: Maximum per flow TCP packets to dissect (ignored when dissect=False).\n",
+    "* `max_tcp_dissections` [default= `80` ]: Maximum per flow TCP packets to dissect (ignored when dissect=False).\n",
     "* `max_udp_dissections` [default= `16` ]: Maximum per flow UDP packets to dissect (ignored when dissect=False).\n",
     "* `statistics` [default= `False`]: Enable statistical flow features extraction.\n",
     "* `account_ip_padding_size` [default= `False`]: Enable Ethernet padding accounting when reporting IP sizes.\n",
@@ -104,6 +104,31 @@
    "outputs": [],
    "source": [
     "df = NFStreamer(source=\"pcaps/instagram.pcap\", statistics=True).to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can enable IP anonymization as follow:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = NFStreamer(source=\"pcaps/instagram.pcap\", statistics=True).to_pandas(ip_anonymization=True)"
    ]
   },
   {
