--- a/demo_notebook.ipynb
+++ b/demo_notebook.ipynb
@@ -8,6 +8,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nfstream\n",
+    "print(nfstream.__version__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,7 +175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = NFStreamer(source=\"tests/pcap/instagram.pcap\", statistical_analysis=True).to_pandas(ip_anonymization=True)"
+    "df = NFStreamer(source=\"tests/pcap/instagram.pcap\", \n",
+    "                statistical_analysis=True).to_pandas(columns_to_anonymize=[\"src_ip\", \"src_mac\", \"dst_ip\", \"dst_mac\"])"
    ]
   },
   {
@@ -299,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
